--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thirupathi R- Digital Portfolio</title>
+    <title>SIDDHARTH S Digital Portfolio</title>
     <style>
         body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #DADADD; }
         .header { background: #C1C1C7 ; color: white; text-align: left; padding: 30px; display: flex; align-items: center; }
@@ -26,7 +26,7 @@
     <div class="header">
         <img src="thirups.jpg" alt="profile Picture" class="profile-img">
         <div class="header-text">
-            <h1>Thirupathi R</h1>
+            <h1>SIDDHARTH S</h1>
             <p>An Aspiring IT Professional</p>
         </div>
     </div>
@@ -45,8 +45,8 @@
         </div>
         <div id="education" class="section">
             <h2>Education</h2>
-            <p><strong>HSC:</strong> Government higher secondary school (79%)</p>
-            <p><strong>SSLC:</strong> Government higher secondary school (96%)</p>
+            <p><strong>HSC:</strong> chinnasamy ammal boys higher secondary school (79%)</p>
+            <p><strong>SSLC:</strong> chikkana Chettiayar matriculation school (79%)</p>
         </div>
         <div id="certificates" class="section">
             <h2>Certificates</h2>
@@ -67,6 +67,7 @@
     </div>
 </body>
 </html>
+
 
 
 
