--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
     <div class="header">
-        <img src="sindy.jpg" alt="profile Picture" class="profile-img">
+        <img src="Sindy.jpg" alt="profile Picture" class="profile-img">
         <div class="header-text">
             <h1>SIDDHARTH S</h1>
             <p>An Aspiring IT Professional</p>
@@ -67,6 +67,7 @@
     </div>
 </body>
 </html>
+
 
 
 
