--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
         <div id="certificates" class="section">
             <h2>Certificates</h2>
-            <img src="paper.jpg" alt="profile Picture"class="certificates-img">
+            <img src="Pics.jpg" alt="profile Picture"class="certificates-img">
         </div>
         <div id="skills" class="section">
             <h2>Technical Skills</h2>
@@ -67,6 +67,7 @@
     </div>
 </body>
 </html>
+
 
 
 
